tests/PHPStan/DependencyInjection/invalidIgnoreErrors/identifier-and-identifiers.neon
parameters:
	ignoreErrors:
		-
			identifier: argument.type
			identifiers: [argument.type]
